--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "scripts": {
         "start": "node index.js",
         "dev": "nodemon index.js",
+        "build:ui": "rm -rf dist && cd ../../../miduBootcamp/part2/phonebook && npm run build && cp -r dist ../../../miduBootcampTwo/part3/phonebook-backend",
+        "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
         "lint": "eslint .",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
