--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "nodemon index.js",
         "build:ui": "rm -rf dist && cd ../../../miduBootcamp/part2/phonebook && npm run build && cp -r dist ../../../miduBootcampTwo/part3/phonebook-backend",
         "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-        "lint": "eslint .",
+        "eslint": "eslint .",
+        "eslint:fix": "eslint . --fix",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
@@ -15,6 +16,7 @@
     "description": "",
     "devDependencies": {
         "@eslint/js": "^9.10.0",
+        "@stylistic/eslint-plugin-js": "^2.8.0",
         "eslint": "^9.10.0",
         "globals": "^15.9.0",
         "nodemon": "^3.1.4"
